Revision history for Dist-Zilla-PluginBundle-Author-SKIRMESS

{{$NEXT}}

0.006  2017-08-29 22:18:19 UTC

  - Add .perltidyrc to the distribution
  - Added 'theme = core' to .perlcriticrc
  - Added Dist::Zilla::Plugin::Author::SKIRMESS::Perl::Tidy::RC
  - Added Dist::Zilla::Plugin::Author::SKIRMESS::Test::XT::Test::Changes
  - Added
    Dist::Zilla::Plugin::Author::SKIRMESS::Test::XT::Test::CleanNamespaces
  - Added Dist::Zilla::Plugin::Author::SKIRMESS::Test::XT::Test::EOL
  - Added Dist::Zilla::Plugin::Author::SKIRMESS::TravisCI
  - Added Test::CPAN::Changes release test
  - Added Test::CleanNamespaces author test
  - Added Test::EOL release test
  - Allow travis_ci_ignore_perl configuration option for dist.ini
  - Also scan files under t and xt with Test::Spelling
  - Automatically create the .perltidyrc file
  - Automatically create the .travis.yml file
  - Moved xt/author/perlcriticrc to .perlcriticrc
  - No longer define a -profile for Test::Perl::Critic as the .perlcriticrc
    is now in the cwd
  - No longer set AUTHOR_TESTING env variable on TravisCI because we don't
    check for that anymore
  - Run 'make manifest' on TravisCI before running release tests
  - Run xt/release tests on TravisCI
  - Skip pod-no404s.t author tests during AUTOMATED_TESTING

0.005  2017-08-26 18:55:22 UTC

  - A default Perl::Critic config file xt/author/perlcriticrc is created if
    none exists. Existing files are not changed
  - Added Dist::Zilla::Plugin::Author::SKIRMESS::Test::XT::Test::CPAN::Meta
  - Added
    Dist::Zilla::Plugin::Author::SKIRMESS::Test::XT::Test::CPAN::Meta::JSON
  - Added Dist::Zilla::Plugin::Author::SKIRMESS::Test::XT::Test::DistManifest
  - Added Dist::Zilla::Plugin::Author::SKIRMESS::Test::XT::Test::Kwalitee
  - Added
    Dist::Zilla::Plugin::Author::SKIRMESS::Test::XT::Test::MinimumVersion
  - Added Dist::Zilla::Plugin::Author::SKIRMESS::Test::XT::Test::Mojibake
  - Added Dist::Zilla::Plugin::Author::SKIRMESS::Test::XT::Test::NoTabs