@@ -87,6 +87,7 @@ requires:
   Dist::Zilla: '0'
   Dist::Zilla::Plugin::Authority: '1.009'
   Dist::Zilla::Plugin::AutoPrereqs: '0'
+  Dist::Zilla::Plugin::AutoPrereqs::Perl::Critic: '0'
   Dist::Zilla::Plugin::Bootstrap::lib: '0'
   Dist::Zilla::Plugin::CPANFile: '0'
   Dist::Zilla::Plugin::CheckChangesHasContent: '0'
@@ -345,6 +346,10 @@ x_Dist_Zilla:
       class: Dist::Zilla::Plugin::AutoPrereqs
       name: '@Author::SKIRMESS/AutoPrereqs'
       version: '6.010'
+    -
+      class: Dist::Zilla::Plugin::AutoPrereqs::Perl::Critic
+      name: '@Author::SKIRMESS/AutoPrereqs::Perl::Critic'
+      version: '0.002'
     -
       class: Dist::Zilla::Plugin::Authority
       name: '@Author::SKIRMESS/Authority'
