@@ -21,6 +21,7 @@ my %WriteMakefileArgs = (
     "Dist::Zilla" => 0,
     "Dist::Zilla::Plugin::Authority" => "1.009",
     "Dist::Zilla::Plugin::AutoPrereqs" => 0,
+    "Dist::Zilla::Plugin::AutoPrereqs::Perl::Critic" => 0,
     "Dist::Zilla::Plugin::Bootstrap::lib" => 0,
     "Dist::Zilla::Plugin::CPANFile" => 0,
     "Dist::Zilla::Plugin::CheckChangesHasContent" => 0,
@@ -94,6 +95,7 @@ my %FallbackPrereqs = (
   "Dist::Zilla" => 0,
   "Dist::Zilla::Plugin::Authority" => "1.009",
   "Dist::Zilla::Plugin::AutoPrereqs" => 0,
+  "Dist::Zilla::Plugin::AutoPrereqs::Perl::Critic" => 0,
   "Dist::Zilla::Plugin::Bootstrap::lib" => 0,
   "Dist::Zilla::Plugin::CPANFile" => 0,
   "Dist::Zilla::Plugin::CheckChangesHasContent" => 0,
